# openai-test

./: README.md  delete_assistant.py  dockerfile  pdf_api.py  pdf_to_txt.py  pyproject.toml  test.py
data/: parsed.csv  parsed.json  parsed1.json  test-data.txt
demo/: screen-capture-docker.webm  screen-capture.webm
rda/: __main__.py  cli.py
rda/api/: flet_app.py
rda/configs/: config_controller.py  configs.yaml
rda/core/: assistant.py  ft.py
rda/utils/: file_io.py  timer.py
